--- a/Spring05_MyBatis/src/main/resources/application.properties
+++ b/Spring05_MyBatis/src/main/resources/application.properties
@@ -16,14 +16,17 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 # type 에 별칭을 붙인 클래스를 찾아서 로딩하기 위해 
 mybatis.type-aliases-package=com.example.spring05.**
 
-
-
-
-
-
-
-
+# jsp 를 테스트 하기 위한 설정 
 # view page 위치에 붙을 접두어 설정
-#spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.prefix=/WEB-INF/views/
 # view page 위치에 붙을 접미어 설정
-#spring.mvc.view.suffix=.jsp
+spring.mvc.view.suffix=.jsp
+
+
+
+
+
+
+
+
+
