--- a/Spring12_ReactAPI/src/main/resources/application.properties
+++ b/Spring12_ReactAPI/src/main/resources/application.properties
@@ -16,3 +16,7 @@ spring.jpa.show-sql=true
 # update 는 테이블 유지, create 는 시작할때 테이블 삭제 및 다시 만들기
 # create-drop 은 시작할때 테이블 생성, 종료될때 테이블 삭제 
 spring.jpa.hibernate.ddl-auto=create-drop 
+
+# swagger ui 관련 설정
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
