--- a/Spring15_FinalAPI/src/main/resources/application.properties
+++ b/Spring15_FinalAPI/src/main/resources/application.properties
@@ -8,11 +8,11 @@ spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=scott
 spring.datasource.password=TIGER
 
-# mybatis 에서 사용하는 xml 문서가 어디에 있는지 알려주기
-# classpath: 은  resources 폴더를 가리킨다.
-mybatis.mapper-locations=classpath:mapper/*.xml
-# type 에 별칭을 붙인 클래스를 찾아서 로딩하기 위해 
+
+# spring devtools 가 서버를 restart 할때 모든 classpath 를 검색하도록 classpath*
+mybatis.mapper-locations=classpath*:mapper/*.xml 
 mybatis.type-aliases-package=com.example.spring15.**
+
 
 # file size, request size setting
 spring.servlet.multipart.max-file-size=50MB
