--- a/Spring18_DockerTest/src/main/resources/application.properties
+++ b/Spring18_DockerTest/src/main/resources/application.properties
@@ -16,3 +16,7 @@ spring.datasource.password=${ORACLE_PASSWORD:TIGER}
 mybatis.mapper-locations=classpath:mapper/*.xml
 # type 에 별칭을 붙인 클래스를 찾아서 로딩하기 위해 
 mybatis.type-aliases-package=com.example.spring18.**
+
+# file size, request size setting
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=60MB
